# grocery_inventory

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  config.example.toml  start.sh
.beads/: metadata.json
.claude/: settings.json  skills-lock.json
.claude/agents/: code-reviewer.md  coder.md  test-runner.md
.claude/rules/: git-workflow.md  rust-style.md  testing.md
.claude/skills/review/: skill.md
.claude/skills/tdd/: SKILL.md  deep-modules.md  interface-design.md  mocking.md  refactoring.md  tests.md
.claude/skills/test/: skill.md
.claude/skills/wrapup/: skill.md
docs/: api.md  architecture.md  cli.md  getting-started.md
src/: app.rs  category.rs  config.rs  db.rs  item.rs  lib.rs  location.rs  main.rs  receipt.rs  shopping.rs  web.rs
