[package]
name = "grocery_inventory"
version = "0.1.0"
edition = "2021"
description = "A home grocery inventory management system"

[features]
default = []
web = ["dep:axum", "dep:tower-http"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Optional web dependencies
axum = { version = "0.7", optional = true }
tower-http = { version = "0.5", features = ["cors", "trace"], optional = true }

[dev-dependencies]
http-body-util = "0.1"
serde_json = "1"
tempfile = "3"
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
